--- a/src/index.css
+++ b/src/index.css
@@ -10,27 +10,40 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #747bff;
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+header {
+  background: #CE2829;
+  color: #FAF7F2;
+  padding: 15px;
+  text-align: center;
+ 
+    position: relative; 
+    display: flex;
+    justify-content: center;
+
 }
+
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+h2 {
+  font-size: 48px;
+  font-weight: bold;
+  color: #FAF7F2;
+  letter-spacing: -2px;
+  
+}   
 
 button {
   border-radius: 8px;
